# VkShaderGUTS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  VkLayer_shader_guts.temp.json  vcpkg.json
src/: PipelineLibrary.hpp  defines.hpp  glslangShaders.hpp  gui.hpp  guts.hpp  layer.cpp  layer.hpp  sha1.c  sha1.h  sha1_util.cpp  util.hpp
src/gui/: gui.cpp  gui.hpp  imgui_util.hpp
src/gui/menu/: PipelinesMenu.cpp  PlaybackMenu.cpp
src/gui_elements/: PipelinesMenu.cpp  PlaybackMenu.cpp
src/imgui/: imgui_util.hpp
